proved formblock doesn't work with checkbox

--- a/src/ContosoUniversity/Features/Course/Edit.cshtml
+++ b/src/ContosoUniversity/Features/Course/Edit.cshtml
@@ -25,6 +25,7 @@
         </div>
 
         @Html.FormBlock(m => m.Title)
+        @Html.FormBlock(m => m.YourFace)
         @Html.FormBlock(m => m.Credits)
         @Html.FormBlock(m => m.Department)
 
